[package]
name = "meme_quicksilver"
version = "0.4.0"
authors = ["Paul Houghton <paulirotta@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"
# rayon = "1.3"
# quicksilver="0.3"

#[target.'cfg(target_arch = "x86_64")'.dependencies]
quicksilver = {git = "https://github.com/paulirotta/quicksilver.git", branch="image-fix-test"}

#[target.'cfg(not(target_arch = "x86_64"))'.dependencies]
#quicksilver = {git = "https://github.com/paulirotta/quicksilver.git", branch="v3-gl3-i8u8-fix"}

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
meme_machine_database = {git = "https://github.com/N-of-1/meme_machine_database.git", version = "0.2.0"}
nannou_osc = "0.1"
env_logger = "0.7"
ws = "0.9"

[target.'cfg(target_arch = "wasm32")'.dependencies]
web_logger = { version = "0.2" }

[target.'cfg(target_arch = "aarch64")'.dependencies]
rppal = "0.11"

[profile.release]
opt-level = 'z'
# lto = true

